Simplified and improved CMake interfaces

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -13,10 +13,6 @@ if(NOT DEFINED @PROJECT_NAME@_DIR)
     set(@PROJECT_NAME@_DIR ${CMAKE_CURRENT_LIST_DIR})
 endif(NOT DEFINED @PROJECT_NAME@_DIR)
 set(TIMEMORY_C_LIBRARY @TIMEMORY_BUILD_C@)
-set(TIMEMORY_CUDA_LIBRARY OFF)
-if(@TIMEMORY_USE_CUPTI@ AND @TIMEMORY_USE_CUDA@)
-    set(TIMEMORY_CUDA_LIBRARY ON)
-endif()
 
 # compile options
 set(@PROJECT_NAME@_C_COMPILE_OPTIONS @PROJECT_C_COMPILE_OPTIONS@)
@@ -27,32 +23,30 @@ set(@PROJECT_NAME@_BUILD_TYPE @CMAKE_BUILD_TYPE@)
 # installed and interface libraries
 set(@PROJECT_NAME@_COMPILED_LIBRARIES @TIMEMORY_COMPILED_LIBRARIES@)
 set(@PROJECT_NAME@_INTERFACE_LIBRARIES @TIMEMORY_INTERFACE_LIBRARIES@)
-set(@PROJECT_NAME@_EXTERNAL_LIBRARIES @TIMEMORY_EXTERNAL_LIBRARIES@)
+set(@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES @TIMEMORY_EMPTY_INTERFACE_LIBRARIES@)
 
-# language standards
-set(CMAKE_C_STANDARD @CMAKE_C_STANDARD@ CACHE STRING "")
-set(CMAKE_CXX_STANDARD @CMAKE_CXX_STANDARD@ CACHE STRING "")
-set(CMAKE_CUDA_STANDARD @CMAKE_CUDA_STANDARD@ CACHE STRING "")
+if(@PROJECT_NAME@_LANGUAGE_STANDARDS)
+    # language standards
+    set(CMAKE_C_STANDARD @CMAKE_C_STANDARD@ CACHE STRING "")
+    set(CMAKE_CXX_STANDARD @CMAKE_CXX_STANDARD@ CACHE STRING "")
+    set(CMAKE_CUDA_STANDARD @CMAKE_CUDA_STANDARD@ CACHE STRING "")
 
-# language standard required
-set(CMAKE_C_STANDARD_REQUIRED @CMAKE_C_STANDARD_REQUIRED@ CACHE BOOL "")
-set(CMAKE_CXX_STANDARD_REQUIRED @CMAKE_CXX_STANDARD_REQUIRED@ CACHE BOOL "")
-set(CMAKE_CUDA_STANDARD_REQUIRED @CMAKE_CUDA_STANDARD_REQUIRED@ CACHE BOOL "")
+    # language standard required
+    set(CMAKE_C_STANDARD_REQUIRED @CMAKE_C_STANDARD_REQUIRED@ CACHE BOOL "")
+    set(CMAKE_CXX_STANDARD_REQUIRED @CMAKE_CXX_STANDARD_REQUIRED@ CACHE BOOL "")
+    set(CMAKE_CUDA_STANDARD_REQUIRED @CMAKE_CUDA_STANDARD_REQUIRED@ CACHE BOOL "")
 
-# language extensions
-set(CMAKE_C_EXTENSIONS @CMAKE_C_EXTENSIONS@ CACHE BOOL "")
-set(CMAKE_CXX_EXTENSIONS @CMAKE_CXX_EXTENSIONS@ CACHE BOOL "")
-set(CMAKE_CUDA_EXTENSIONS @CMAKE_CUDA_EXTENSIONS@ CACHE BOOL "")
+    # language extensions
+    set(CMAKE_C_EXTENSIONS @CMAKE_C_EXTENSIONS@ CACHE BOOL "")
+    set(CMAKE_CXX_EXTENSIONS @CMAKE_CXX_EXTENSIONS@ CACHE BOOL "")
+    set(CMAKE_CUDA_EXTENSIONS @CMAKE_CUDA_EXTENSIONS@ CACHE BOOL "")
+endif()
 
 # languages
 set(TIMEMORY_LANGUAGES CXX)
 
 if(TIMEMORY_C_LIBRARY)
     list(APPEND TIMEMORY_LANGUAGES C)
-endif()
-
-if(TIMEMORY_CUDA_LIBRARY)
-    list(APPEND TIMEMORY_LANGUAGES CUDA)
 endif()
 
 #------------------------------------------------------------------------------#
@@ -118,13 +112,6 @@ else() # build tree
         if(TIMEMORY_C_LIBRARY)
             target_compile_definitions(@LIBNAME@-c-static PUBLIC _TIMEMORY_ARCHIVE)
         endif()
-    endif()
-
-    if(TIMEMORY_CUDA_LIBRARY)
-        set_property(TARGET @LIBNAME@-cupti-shared
-            PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
-        set_property(TARGET @LIBNAME@-cupti-static
-            PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
     endif()
 
 endif()
@@ -246,31 +233,30 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "")
             @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_LANGUAGE})
         else()
             @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_LANGUAGE}-${_LINK})
-            @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_LANGUAGE}-compile-options compile-options)
         endif()
     endforeach()
-
-    if("cupti" IN_LIST @PROJECT_NAME@_FIND_COMPONENTS)
-        @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-cupti-${_LINK} cupti)
-    endif()
 
     foreach(_COMPONENT ${@PROJECT_NAME@_FIND_COMPONENTS})
         @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_COMPONENT} ${_COMPONENT})
     endforeach()
 
-    if(NOT TIMEMORY_CUDA_LIBRARY)
-        list(REMOVE_ITEM @PROJECT_NAME@_FOUND_COMPONENTS timemory-cupti-static)
-        list(REMOVE_ITEM @PROJECT_NAME@_FOUND_COMPONENTS timemory-cupti-shared)
-    endif()
-
+    # remove duplicate interface libraries
     if(NOT "${@PROJECT_NAME@_FOUND_COMPONENTS}" STREQUAL "")
         list(REMOVE_DUPLICATES @PROJECT_NAME@_FOUND_COMPONENTS)
     endif()
+
+    # remove empty interface libraries
+    if(@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES)
+        list(REMOVE_ITEM @PROJECT_NAME@_FOUND_COMPONENTS
+            ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
+    endif()
+
     list(SORT @PROJECT_NAME@_FOUND_COMPONENTS)
     set(_COMPONENT_LIST ${@PROJECT_NAME@_FOUND_COMPONENTS})
     string(REPLACE ";" ", " _COMPONENT_LIST "${_COMPONENT_LIST}")
     string(REPLACE "timemory-" "" _COMPONENT_LIST "${_COMPONENT_LIST}")
-    message(STATUS "[${PROJECT_NAME}] @PROJECT_NAME@ : \"${_INTERFACE_LIB}\" components: ${_COMPONENT_LIST}")
+    message(STATUS
+      "[${PROJECT_NAME}] @PROJECT_NAME@ : \"${_INTERFACE_LIB}\" components: ${_COMPONENT_LIST}")
 
     unset(_COMPONENT_LIST)
     unset(_LINK)
