--- a/examples/ex-cuda-event/CMakeLists.txt
+++ b/examples/ex-cuda-event/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(TiMemory-CUDA-Event-Example LANGUAGES C CXX CUDA)
 
 set(EXE_NAME test_cuda_event)
-set(COMPONENTS cxx cuda compile-options)
+set(COMPONENTS cxx cuda papi threading compile-options)
 
 option(USE_CUPTI "Enable CUPTI" OFF)
 if(USE_CUPTI)
@@ -17,9 +17,7 @@ endif()
 
 set(TiMemory_FIND_COMPONENTS_INTERFACE timemory-cuda-event-example)
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
+
 add_executable(${EXE_NAME} ${EXE_NAME}.cu)
 target_link_libraries(${EXE_NAME} timemory-cuda-event-example)
-
-if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
-    install(TARGETS ${EXE_NAME} DESTINATION bin)
-endif()
+install(TARGETS ${EXE_NAME} DESTINATION bin)
