--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ cmake_policy(SET CMP0042 NEW)
 file(READ "${CMAKE_CURRENT_LIST_DIR}/VERSION" VERSION_STRING LIMIT_COUNT 1)
 string(REGEX REPLACE "(\n|\r)" "" VERSION_STRING "${VERSION_STRING}")
 string(REGEX REPLACE "[A-Za-z].*" "" VERSION_STRING "${VERSION_STRING}")
-set(TIMEMORY_VERSION "${VERSION_STRING}" CACHE STRING "Version of TiMemory project" FORCE)
+set(TIMEMORY_VERSION "${VERSION_STRING}")
 message(STATUS "TiMemory version ${TIMEMORY_VERSION}")
 
 #----------------------------------------------------------------------------------------#
@@ -34,28 +34,35 @@ project(TiMemory LANGUAGES C CXX VERSION ${TIMEMORY_VERSION})
 # Check if project is being used directly or via add_subdirectory
 set(${PROJECT_NAME}_MASTER_PROJECT ON)
 if(NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-  set(${PROJECT_NAME}_MASTER_PROJECT OFF)
+    set(${PROJECT_NAME}_MASTER_PROJECT OFF)
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake/Modules
     ${CMAKE_CURRENT_LIST_DIR}/source/python/pybind11/tools
     ${CMAKE_MODULE_PATH})
+set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME development)
+set(CMAKE_DIRECTORY_LABELS "${PROJECT_NAME}")
+set(CMAKE_INSTALL_MESSAGE LAZY)
 
 foreach(_TYPE MAJOR MINOR PATCH)
-    set(TIMEMORY_VERSION_${_TYPE} ${PROJECT_VERSION_${_TYPE}} CACHE STRING "${PROJECT_NAME} ${_TYPE} version" FORCE)
-    mark_as_advanced(TIMEMORY_VERSION_${_TYPE})
+    set(TIMEMORY_VERSION_${_TYPE} ${PROJECT_VERSION_${_TYPE}})
 endforeach(_TYPE MAJOR MINOR PATCH)
-
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake/Modules ${CMAKE_MODULE_PATH})
-set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME development)
-mark_as_advanced(TIMEMORY_VERSION)
-
-if(SKBUILD)
-    set(TIMEMORY_SETUP_PY OFF CACHE BOOL "Built with scikit-build" FORCE)
-endif()
-
-set(CMAKE_DIRECTORY_LABELS "${PROJECT_NAME}")
 set(LIBNAME timemory)
+
+# ---------------------------------------------------------------------------- #
+# set the output directory (critical for Windows and Xcode)
+#
+foreach(_TYPE ARCHIVE LIBRARY RUNTIME)
+    if(WIN32)
+        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/outputs/runtime)
+        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/outputs/library)
+        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/outputs/archive)
+    else()
+        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+    endif()
+endforeach()
 
 #----------------------------------------------------------------------------------------#
 #   TiMemory source
