--- a/examples/ex-cxx-overhead/CMakeLists.txt
+++ b/examples/ex-cxx-overhead/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(TiMemory-CXX-Overhead-Example LANGUAGES C CXX)
 
 set(EXE_NAME test_cxx_overhead)
-set(COMPONENTS cxx compile-options extensions)
+set(COMPONENTS cxx compile-options papi threading analysis-tools)
 
 option(USE_EXTERN_TEMPLATES "Enable extern templates" OFF)
 if(USE_EXTERN_TEMPLATES)
@@ -12,9 +12,7 @@ endif()
 
 set(TiMemory_FIND_COMPONENTS_INTERFACE timemory-cxx-overhead-example)
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
+
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
 target_link_libraries(${EXE_NAME} timemory-cxx-overhead-example)
-
-if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
-    install(TARGETS ${EXE_NAME} DESTINATION bin)
-endif()
+install(TARGETS ${EXE_NAME} DESTINATION bin)
