Fixes for timem caused by call_once

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -1,11 +1,9 @@
 
 ##########################################################################################
-
 #
 #        timem tool
 #
 ##########################################################################################
-
 
 # disabled
 if(NOT TIMEMORY_BUILD_TOOLS)
@@ -17,16 +15,37 @@ if(WIN32)
     return()
 endif()
 
-set(TIMEM_NAME timem)
+#----------------------------------------------------------------------------------------#
+# Embed the link path into the executable
+#
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
 
-add_executable(${TIMEM_NAME} timem.cpp)
+#----------------------------------------------------------------------------------------#
+# PAPI interface library with static linkage if possible
+#
+add_library(timem-papi INTERFACE)
+if(PAPI_FOUND)
+    target_compile_definitions(timem-papi INTERFACE TIMEMORY_USE_PAPI)
+    target_include_directories(timem-papi INTERFACE ${PAPI_INCLUDE_DIRS})
+    if(PAPI_STATIC_LIBRARY AND PAPI_pfm_LIBRARY)
+        target_link_libraries(timem-papi INTERFACE ${PAPI_STATIC_LIBRARY} ${PAPI_pfm_LIBRARY})
+    else()
+        target_link_libraries(timem-papi INTERFACE ${PAPI_LIBRARIES})
+    endif()
+endif()
 
-target_link_libraries(${TIMEM_NAME} PRIVATE
+#----------------------------------------------------------------------------------------#
+# Build, link, and install exe
+#
+add_executable(timem timem.cpp)
+
+target_link_libraries(timem PRIVATE
     timemory-compile-options
     timemory-headers
-    timemory-cxx-static)
+    timemory-cxx-static
+    timem-papi)
 
 # timem installation
-install(TARGETS ${TIMEM_NAME}
+install(TARGETS timem
     DESTINATION ${TIMEMORY_INSTALL_BINDIR}
     COMPONENT development)
