Integrated the test for the roofline and corresponding fixes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -39,6 +39,7 @@ if(TIMEMORY_BUILD_C OR TIMEMORY_C_LIBRARY)
 endif()
 add_subdirectory(ex-cxx-tuple)
 add_subdirectory(ex-cxx-overhead)
+add_subdirectory(ex-roofline)
 
 get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
 find_package(CUDA QUIET)
