--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -1,6 +1,10 @@
 
 # cmake_policy(SET CMP0057 NEW)
 
+if(CMAKE_VERSION VERSION_LESS 3.10)
+    message(FATAL_ERROR "@PROJECT_NAME@ configuration file requires CMake 3.10+")
+endif()
+
 include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@ConfigVersion.cmake)
 
 @PACKAGE_INIT@
