Update event + no papi in extern + language fixes

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -223,6 +223,7 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "")
     if("extern-templates" IN_LIST @PROJECT_NAME@_FIND_COMPONENTS)
         if(NOT WIN32)
             @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-extern-templates extern-templates)
+            @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-cxx-${_LINK})
         else()
             message(WARNING "timemory-extern-templates not available on Windows")
             list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS timemory-extern-templates)
