--- a/examples/ex-roofline/CMakeLists.txt
+++ b/examples/ex-roofline/CMakeLists.txt
@@ -12,25 +12,26 @@ endif()
 
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 
-set(sources test_cxx_roofline.cpp kernel.cpp kernel.hpp rep.h)
-
-add_executable(${EXE_NAME}-macros ${sources})
-add_executable(${EXE_NAME}-templates ${sources})
 add_executable(${EXE_NAME}-fib ${EXE_NAME}_fib.cpp)
-
-target_link_libraries(${EXE_NAME}-macros timemory)
-install(TARGETS ${EXE_NAME}-macros DESTINATION bin)
-target_compile_definitions(${EXE_NAME}-macros PRIVATE MACROS)
-set_target_properties(${EXE_NAME}-macros PROPERTIES
-  OUTPUT_NAME ${EXE_NAME}-ert-with-macros)
-
-target_link_libraries(${EXE_NAME}-templates timemory)
-install(TARGETS ${EXE_NAME}-templates DESTINATION bin)
-target_compile_definitions(${EXE_NAME}-templates PRIVATE TEMPLATES)
-set_target_properties(${EXE_NAME}-templates PROPERTIES
-  OUTPUT_NAME ${EXE_NAME}-ert-with-templates)
-
 target_link_libraries(${EXE_NAME}-fib timemory)
 install(TARGETS ${EXE_NAME}-fib DESTINATION bin)
 set_target_properties(${EXE_NAME}-fib PROPERTIES
   OUTPUT_NAME ${EXE_NAME})
+
+if(TIMEMORY_USE_PAPI)
+    set(sources test_cxx_roofline.cpp kernel.cpp kernel.hpp rep.h)
+
+    add_executable(${EXE_NAME}-macros ${sources})
+    target_link_libraries(${EXE_NAME}-macros timemory)
+    install(TARGETS ${EXE_NAME}-macros DESTINATION bin)
+    target_compile_definitions(${EXE_NAME}-macros PRIVATE MACROS)
+    set_target_properties(${EXE_NAME}-macros PROPERTIES
+        OUTPUT_NAME ${EXE_NAME}-ert-with-macros)
+
+    add_executable(${EXE_NAME}-templates ${sources})
+    target_link_libraries(${EXE_NAME}-templates timemory)
+    install(TARGETS ${EXE_NAME}-templates DESTINATION bin)
+    target_compile_definitions(${EXE_NAME}-templates PRIVATE TEMPLATES)
+    set_target_properties(${EXE_NAME}-templates PROPERTIES
+        OUTPUT_NAME ${EXE_NAME}-ert-with-templates)
+endif()
