--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -240,7 +240,7 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "")
             @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_LANGUAGE})
 
             set(_CUDART_DEV OFF)
-            set(_CUDART     ON)
+            set(_CUDART     OFF)
             # if cudart-device specified, only link to timemory-cudart-device
             if("cudart-device" IN_LIST @PROJECT_NAME@_FIND_COMPONENTS)
                 set(_CUDART_DEV ON)
@@ -257,7 +257,7 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "")
                 set(_MSG "Requesting linking to cudadevrt (device runtime) and")
                 set(_MSG "${_MSG} cudart/cudart_static. This has been found to cause")
                 set(_MSG "${_MSG} compilation error in CUDA 10.1")
-                message(DEVELOPER_WARNING "${_MSG}")
+                message(AUTHOR_WARNING "${_MSG}")
                 unset(_MSG)
             endif()
 
